# minesweeper

./: CMakeLists.txt  Dockerfile  Makefile  README.md  Renderer.cpp  Renderer.hpp  data.cpp  data.hpp  fix.cpp  minesweeper  minesweeper.cpp  window.cpp
build-tools/windows/: Dockerfile  build.sh
cmake/: paths.h.in
docs/: todo.md
docs/ftl-tutorial/paint/: paint.cpp
docs/ftl-tutorial/paintcolored/: paintcolored.cpp
docs/ftl-tutorial/paintcoloredwindows/: Makefile  paintcoloredwindows.cpp
ftl-tutorial/paint/: Makefile  paint
ftl-tutorial/paintcolored/: Makefile  paintcolored
ftl-tutorial/paintcoloredwindows/: paintcoloredwindows
ftl-tutorial/xwindow/: Makefile  xwindow  xwindow.cpp
include/: Game.hpp  GameLoop.hpp  Minesweeper.hpp  RasterRenderer.hpp  Renderer.hpp  SpriteFactory.hpp  Sprites.hpp  config.hpp  data.hpp  sprites.hpp  utils.hpp
include/Artist/: BaseArtist.hpp  FaceArtist.hpp  HeaderArtist.hpp  MinefieldArtist.hpp  MinefieldElementArtist.hpp  Rect.h
include/BufferCompositor/: BufferCompositor.hpp  FaceCompositor.hpp  HeaderCompositor.hpp  MinefieldElementCompositor.hpp
include/Window/: GameWindow.hpp  SettingsWindow.hpp  Window.hpp
include/minesweeper/: Renderer.hpp  data.hpp
include/window/: GameWindow.hpp  SettingsWindow.hpp  Window.hpp
src/: Game.cpp  GameLoop.cpp  Minesweeper.cpp  RasterRenderer.cpp  Renderer.cpp  SpriteFactory.cpp  Sprites.cpp  data.cpp  main.cpp  minesweeper.cpp  sprites.cpp  utils.cpp
src/Artist/: BaseArtist.cpp  FaceArtist.cpp  HeaderArtist.cpp  MinefieldArtist.cpp  MinefieldElementArtist.cpp
src/BufferCompositor/: BufferCompositor.cpp  FaceCompositor.cpp  HeaderCompositor.cpp  MinefieldElementCompositor.cpp
src/Window/: GameWindow.cpp  SettingsWindow.cpp
src/window/: GameWindow.cpp  SettingsWindow.cpp
tools/: fixImageData.cpp  install.sh  uint32_tArrayToBinary.cpp
